--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   flutter_bloc: ^8.1.4
   intl: ^0.19.0
   uuid: ^3.0.7
-  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
@@ -41,5 +40,6 @@ flutter:
 
     - assets/images/
     - assets/sounds/
+    - assets/web/timer/digit-timer/
 
   # assets end
