--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: easy_timer
-description: "A new Flutter project."
+description: "cross platform easy_timer"
 publish_to: 'none' 
 version: 1.0.0+1
 
@@ -19,6 +19,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   intl: ^0.19.0
   uuid: ^3.0.7
+  path_provider: ^2.1.1 
 
 dev_dependencies:
   flutter_test:
